<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Controller.ResultActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <TextView
            android:id="@+id/total_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_score"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
             />

        <TextView
            android:id="@+id/Round_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_1"
            app:layout_constraintTop_toBottomOf="@id/total_score"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_2"
            app:layout_constraintTop_toBottomOf="@id/Round_1"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_3"
            app:layout_constraintTop_toBottomOf="@id/Round_2"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_4"
            app:layout_constraintTop_toBottomOf="@id/Round_3"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_5"
            app:layout_constraintTop_toBottomOf="@id/Round_4"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_6"
            app:layout_constraintTop_toBottomOf="@id/Round_5"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_7"
            app:layout_constraintTop_toBottomOf="@id/Round_6"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_8"
            app:layout_constraintTop_toBottomOf="@id/Round_7"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_9"
            app:layout_constraintTop_toBottomOf="@id/Round_8"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"/>

        <TextView
            android:id="@+id/Round_10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/round_10"
            app:layout_constraintTop_toBottomOf="@id/Round_9"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="50dp"
            android:layout_marginStart="50dp"
            />

    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>